[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [".github", ".vscode", "target"]

[workspace.package]
version = "0.0.3"
edition = "2021"

repository = "https://github.com/nikarh/brie"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["brie", "wine", "gaming"]
categories = ["command-line-utilities"]

[workspace.dependencies]
lazy_static = "1.4"
thiserror = "1.0"
path-absolutize = "3.1"
libc = "0.2.150"
fslock = "0.2"
rayon = "1.8.0"
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.4", features = ["derive"] }
xdg = "2.4"
which = "4.4"
indexmap = { version = "2.1.0", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
serde_json = "1.0"
serde_yaml = "0.9"
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"
ureq = { version = "2.9", default-features = false, features = ["json", "native-tls"] }
native-tls = "0.2"
url = "2.5"
log = "0.4"
indicatif = "0.17"
simple_logger = { version = "4.3", default-features = false, features = [
    "colors",
    "stderr",
] }
indicatif-log-bridge = "0.2"
pretty_assertions = "1.4"
image = "0.24"
png = "0.17"
shellexpand = "3.1"
inotify = "0.10"
steam_shortcuts_util = "1.1"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
incremental = true

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
match_bool = "allow"
single_match_else = "allow"
