[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [".github", ".vscode", "target"]

[workspace.package]
version = "0.0.13"
edition = "2021"

repository = "https://github.com/nikarh/brie"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["brie", "wine", "gaming"]
categories = ["command-line-utilities"]

[workspace.dependencies]
thiserror = "2.0"
path-absolutize = "3"
libc = "0.2"
fslock = "0.2"
rayon = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
xdg = "3"
which = "8"
indexmap = { version = "2", features = ["serde", "rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3"
serde_json = "1.0"
serde_yaml = "0.9"
flate2 = "1.1"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"
zip = { version = "8", default-features = false, features = ["deflate"] }
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }
url = "2"
log = "0.4"
indicatif = "0.18"
simple_logger = { version = "5", default-features = false, features = [
    "colors",
    "stderr",
] }
indicatif-log-bridge = "0.2"
pretty_assertions = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
png = "0.18"
shellexpand = "3"
notify = "8"
steam_shortcuts_util = "1"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
strip = true
incremental = true

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
match_bool = "allow"
single_match_else = "allow"
