[package]
name = "brie"
description = "A tool for running windows games on Linux via wine."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brie_cfg = { path = "../brie_cfg" }
brie_wine = { path = "../brie_wine" }

indexmap.workspace = true
xdg.workspace = true
thiserror.workspace = true

log.workspace = true
simple_logger.workspace = true
indicatif-log-bridge.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
