[package]
name = "brie_cfg"
version = "0.1.0"
edition = "2021"

description = "A library containing structures for config deserialization."
repository = "https://github.com/nikarh/brie"
license = "MIT OR Apache-2.0"

authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["brie", "wine", "gaming"]

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
