[package]
name = "brie_cfg"
description = "A library containing structures for brie.yaml deserialization."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_with.workspace = true
indexmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
