[package]
name = "brie_download"
version = "0.0.1"
edition = "2021"

description = "A library for running windows games on Linux via wine."
repository = "https://github.com/nikarh/brie"
license = "MIT OR Apache-2.0"

authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["brie", "wine", "gaming"]

[dependencies]
lazy_static.workspace = true
indicatif.workspace = true
ureq.workspace = true

[lints]
workspace = true
