[package]
name = "brie_download"
description = "A library for running windows games on Linux via wine."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
lazy_static.workspace = true
indicatif.workspace = true
ureq.workspace = true

[lints]
workspace = true
