[package]
name = "brie_download"
description = "A library for running windows games on Linux via wine."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
indicatif.workspace = true
ureq.workspace = true
thiserror.workspace = true
native-tls.workspace = true

[lints]
workspace = true
