[package]
name = "brie_wine"
version = "0.0.1"
edition = "2021"

description = "A library for running windows games on Linux via wine."
repository = "https://github.com/nikarh/brie"
license = "MIT OR Apache-2.0"

authors = ["Nikolay Arhipov <n@arhipov.net>"]
keywords = ["brie", "wine", "gaming"]

[dependencies]
brie_cfg = { path = "../brie_cfg" }
brie_download = { path = "../brie_download" }

log.workspace = true
indicatif.workspace = true

thiserror.workspace = true
which.workspace = true
serde.workspace = true
ureq.workspace = true
rayon.workspace = true
libc.workspace = true
path-absolutize.workspace = true
shellexpand.workspace = true
lazy_static.workspace = true
fslock.workspace = true
uuid.workspace = true
indexmap.workspace = true

flate2.workspace = true
xz2.workspace = true
tar.workspace = true
zstd.workspace = true

[dev-dependencies]
indicatif-log-bridge.workspace = true
simple_logger.workspace = true

[lints]
workspace = true
