[package]
name = "brie_wine"
description = "A library for running windows games on Linux via wine."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brie_cfg = { path = "../brie_cfg" }
brie_download = { path = "../brie_download" }

log.workspace = true

thiserror.workspace = true
which.workspace = true
serde.workspace = true
ureq.workspace = true
rayon.workspace = true
libc.workspace = true
path-absolutize.workspace = true
shellexpand.workspace = true
fslock.workspace = true
uuid.workspace = true
indexmap.workspace = true

flate2.workspace = true
xz2.workspace = true
tar.workspace = true
zstd.workspace = true
zip.workspace = true

[dev-dependencies]
indicatif-log-bridge.workspace = true
simple_logger.workspace = true

[lints]
workspace = true
