[package]
name = "briectl"
description = "A tool for managing units used by brie command line tool."
publish = false

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
brie_cfg = { path = "../brie_cfg" }
brie_download = { path = "../brie_download" }

clap.workspace = true
ureq.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
thiserror.workspace = true
image.workspace = true
png.workspace = true
rayon.workspace = true
log.workspace = true
indicatif.workspace = true
xdg.workspace = true
shellexpand.workspace = true
inotify.workspace = true
steam_shortcuts_util.workspace = true

simple_logger.workspace = true
indicatif-log-bridge.workspace = true

[dev-dependencies]
indicatif-log-bridge.workspace = true
simple_logger.workspace = true

[lints]
workspace = true
