[package]
name = "rutris"
version = "0.1.0"
edition = "2021"

[dependencies]
rutris_lib = { path = "../rutris_lib" }

serde.workspace = true
serde_yaml.workspace = true
xdg.workspace = true
thiserror.workspace = true

log.workspace = true
pretty_env_logger.workspace = true
indicatif-log-bridge.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
